# NSE_Bot

./: pyproject.toml  render.yaml
NSE_Bot_v1/: Makefile  README.md  requirements.txt
NSE_Bot_v1/src/nse_bot/: cli.py  config.py  models.py
NSE_Bot_v1/src/nse_bot/agents/: risk_manager_agent.py
NSE_Bot_v1/src/nse_bot/data/: fundamentals.py  market_data.py
NSE_Bot_v1/src/nse_bot/persistence/: storage.py
NSE_Bot_v1/src/nse_bot/security/: token_manager.py  token_vault.py
NSE_Bot_v1/src/nse_bot/services/: auto_runner.py  orchestrator.py
NSE_Bot_v1/tests/: test_pipeline_smoke.py
dashboard/: app.py
data/: fundamentals_sample.csv
src/nse_bot/agents/: execution_agent.py  fundamental_agent.py  position_agent.py  technical_agent.py  trade_agent.py
src/nse_bot/api/: main.py
src/nse_bot/data/: universe_provider.py  upstox_api.py
src/nse_bot/security/: token_vault.py
src/nse_bot/streaming/: live_ticks.py
src/nse_bot/utils/: logger.py
